--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
-1. Need to refactor justifier and format function
+1. Replace all abbreviation of l,w,c option to lineCount, wordCount, characterCount resp.
+2. optionCounts function needs to refactor
+3. Need to refactor justifier and format function
